--- a/cssfinal.css
+++ b/cssfinal.css
@@ -329,6 +329,10 @@ header{
     padding-top: 30px;
 }
 
+#review-wrapper div:hover{
+    box-shadow: 5px 5px;
+}
+
 #review-wrapper blockquote{
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
